CFJenkinsTemplate.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "This template launches an EC2 instance with Ubuntu and installs Jenkins."
Parameters:
  InstanceTypeParameter:
    Type: String
    Default: t2.micro
    AllowedValues:
      - t2.micro
      - t2.small
      - t2.medium    
    Description: Enter t2.micro, t2.small, or t2.medium. Default is t2.micro.
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: Must be the name of an existing EC2 key pair.
    Description: Name of an exisiting EC2 key pair to enable access to the instance.
Mappings: 
  RegionMap: 
    us-east-1: 
      "64": "ami-759bc50a"
    us-west-1: 
      "64": "ami-cfc7978a"
    eu-west-1: 
      "64": "ami-2a7d75c0"
    ap-southeast-2:
      Description: Sydney
      "64": "ami-47c21a25"
    ap-northeast-1:
      Description: Tokyo 
      "64": "ami-940cdceb"
    eu-central-1:
      "64": "ami-de8fb135"
Resources: 
  myEC2Instance: 
    Type: "AWS::EC2::Instance"
    Properties: 
      ImageId: !FindInMap [RegionMap, !Ref "AWS::Region", 64]
      InstanceType: !Ref InstanceTypeParameter
      KeyName: !Ref KeyName
      SecurityGroups:
        - !Ref WebServerSecurityGroup
        - !Ref JenkinsSecurityGroup
      UserData: !Base64
        'Fn::Join':
          - ''
          - - |
              #!/bin/bash -xe
            - |
              apt update -y
            - |
              apt upgrade -y
            - |
              echo "successful" > test.log
 
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access via ssh as well as HTTP traffic
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 217.162.218.44/32
          FromPort: "22"
          ToPort: "22"
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "80"
          ToPort: "80"

  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow access to Jenkins server on port 8080
      SecurityGroupIngress:
        - IpProtocol: tcp
          CidrIp: 0.0.0.0/0
          FromPort: "8080"
          ToPort: "8080"

Outputs:
  PublicIP:
    Value: !GetAtt [myEC2Instance, "PublicIp"]
